# SAT-RL

./: .gitignore  .pre-commit-config.yaml  MultiAgentSymbolicReasoningReport.md  Near the SAT Phase Transition.md  README.md  agent_behavior_visualization.ipynb  analyze_benchmarks.py  anytime_sat_solver.py  benchmark_comparison.py  benchmark_sat_gan.py  compare.py  compare_oracle_weights.py  compare_thresholds.py  compare_traditional.py  curriculum_sat_learner.py  debug-pre-commit-config.yaml  deep_q_sat_agent.py  diagnose-hooks.sh  environment.yml  generate_architecture_diagram.py  git_setup.sh  implementation_plans.md  improved_curriculum_learning.py  improved_sat_gan.py  mini_sat_solver.py  model_architecture.py  multi_q_sat.py  multi_q_sat_comm.py  multi_q_sat_comp.py  multi_q_sat_gan.py  multi_q_sat_gan_improved.py  multi_q_sat_oracle.py  organize_images.py  parameter_sweep.py  pre-commit-clean.sh  prepare_benchmarks.py  progressive_sat_gan.py  pyproject.toml  pytest.ini  q_learning.py  (+14 more)
.github/workflows/: ci.yml  python-tests.yml
agents/: algebra_agent.py  base_agent.py  random_agent.py
benchmarks/: README.md
benchmarks/phase_transition/: vars100_ratio3.50_inst0.cnf  vars100_ratio3.50_inst2.cnf  vars100_ratio3.50_inst3.cnf  vars100_ratio3.50_inst4.cnf  vars100_ratio3.67_inst3.cnf  vars100_ratio3.67_inst4.cnf  vars100_ratio3.83_inst0.cnf  vars100_ratio4.17_inst0.cnf  vars100_ratio4.17_inst1.cnf  vars100_ratio4.17_inst2.cnf  vars100_ratio4.33_inst0.cnf  vars100_ratio4.33_inst2.cnf  vars100_ratio4.33_inst4.cnf  vars100_ratio4.50_inst0.cnf  vars100_ratio4.50_inst2.cnf  vars100_ratio4.50_inst4.cnf  vars100_ratio4.67_inst0.cnf  vars100_ratio4.67_inst1.cnf  vars100_ratio4.67_inst2.cnf  vars100_ratio4.67_inst4.cnf  vars100_ratio4.83_inst1.cnf  vars100_ratio4.83_inst2.cnf  vars100_ratio4.83_inst3.cnf  vars100_ratio4.83_inst4.cnf  vars200_ratio3.50_inst0.cnf  vars200_ratio3.50_inst2.cnf  vars200_ratio3.50_inst4.cnf  vars200_ratio3.67_inst2.cnf  vars200_ratio3.67_inst3.cnf  vars200_ratio3.67_inst4.cnf  vars200_ratio3.83_inst0.cnf  vars200_ratio3.83_inst1.cnf  vars200_ratio3.83_inst3.cnf  vars200_ratio3.83_inst4.cnf  vars200_ratio4.00_inst1.cnf  vars200_ratio4.17_inst0.cnf  vars200_ratio4.17_inst2.cnf  vars200_ratio4.17_inst4.cnf  vars200_ratio4.33_inst0.cnf  vars200_ratio4.33_inst1.cnf  (+40 more)
config/: compression_config.yaml  external_storage.yaml  observation.yaml
config/curricula/: sat_curriculum.yaml  sympy_curriculum.yaml  z3_curriculum.yaml
configs/: default.yaml
data/benchmarks/phase_transition/: vars100_ratio3.67_inst0.cnf  vars100_ratio4.00_inst2.cnf  vars100_ratio4.00_inst3.cnf  vars100_ratio4.00_inst4.cnf  vars100_ratio4.17_inst3.cnf  vars100_ratio4.17_inst4.cnf  vars100_ratio4.33_inst1.cnf  vars100_ratio4.33_inst3.cnf  vars100_ratio4.50_inst1.cnf  vars100_ratio4.67_inst3.cnf  vars100_ratio4.83_inst0.cnf  vars100_ratio5.00_inst1.cnf  vars200_ratio3.50_inst3.cnf  vars200_ratio4.00_inst3.cnf  vars200_ratio4.00_inst4.cnf  vars200_ratio4.50_inst0.cnf  vars200_ratio4.50_inst3.cnf  vars200_ratio4.83_inst3.cnf  vars200_ratio4.83_inst4.cnf  vars50_ratio3.83_inst0.cnf  vars50_ratio4.00_inst3.cnf  vars50_ratio4.17_inst1.cnf  vars50_ratio4.17_inst2.cnf  vars50_ratio4.33_inst2.cnf  vars50_ratio4.50_inst0.cnf  vars50_ratio4.50_inst2.cnf
data/benchmarks/satlib_uf100/: uf100-010.cnf  uf100-01000.cnf  uf100-0104.cnf  uf100-0105.cnf  uf100-0107.cnf  uf100-0109.cnf  uf100-011.cnf  (+445 more)
docs/: MultiAgentSymbolicReasoningReport.md  Near the SAT Phase Transition.md  SatRLGymConversion.md  api_documentation.md  documentation_overview.md  documentation_summary.md  domain_integration.md  domain_template.py  evaluation_protocol.md  implementation_plans.md  optimized_implementation.md  proof_verification.md  research.md  research_questions.md
environments/: base_env.py  sat_env.py
examples/: agent_usage_examples.py  custom_agent_example.py  demo_multiagent_training.py  env_enhancements_example.py  environment_with_proof_verification.py  example_usage.py  feedback_reward_usage_examples.py  interpretability_usage_examples.py  logging_example.py  metadata_example.py  ppo_gnn_sat.py  satcomp_loader_example.py  shared_encoder_usage_example.py  verify_proofs.py  visualize_multiagent_training.py
experience/: storage.py
experiments/algebra_mvp/: README.md  __init__.py  analysis.ipynb  config.yaml  curriculum.py  logging_utils.py  main.py
local/: local.py
models/: sat_gan_10_40.pth  sat_gan_20_85.pth  sat_gan_30_125.pth  sat_gan_40_170.pth  sat_gan_50_210.pth
notebooks/: Quickstart.ipynb  agent_behavior_visualization.ipynb  quickstart_guide.ipynb  rl_library_integration.ipynb
oracle/: base_oracle.py  simple_oracle.py
scripts/: benchmark_comparison.py  compare.py  dashboard.py  distributed_runner.py  eval.py  experiment_orchestrator.py  generate_report.py  oracle_pretrain.py  profile_environment.py  run_benchmarks.py  sat_rl_demo.py  simple_benchmark.py  train_crossdomain_gnn.py  train_sat_dqn.py
scripts/benchmarks/: analyze_benchmarks.py  benchmark_cli.py
scripts/dataset/: dataset_qa_cli.py
scripts/dev/: compare.py  sat_rl_demo.py  setup_dev_environment.sh
scripts/visualization/: generate_architecture_diagram.py
solvers/: __init__.py  base.py  config.py  legacy_adapter.py  registry.py  walksat_solver.py
src/: main.py  sat_problems.py
src/agents/: curriculum_sat_learner.py  deep_q_sat_agent.py  multi_q_sat.py  multi_q_sat_comm.py  multi_q_sat_comp.py  multi_q_sat_oracle.py  oracle_distillation_agent.py
src/oracles/: sat_oracle.py
src/satrlgym/: __init__.py
src/symbolicgym/: __init__.py  cli.py
src/utils/: concurrent_operations.py  exceptions.py  experience_indexing.py  logging_utils.py  package_utils.py  sat_utils.py
tests/: test_compression.py  test_concurrent_operations.py  test_environment_interfaces.py  test_experience_indexing.py  test_logging_and_exceptions.py  test_metadata.py
utils/: compression.py  exceptions.py  logging_utils.py  metadata.py  type_system.py
utils/storage/: arrow_backend.py  framework_integration.py  hdf5_backend.py  metadata_integration.py
(+2081 files in other folders)
