[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat_rl"
version = "0.1.0"
description = "Reinforcement Learning for Boolean Satisfiability Problems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SAT+RL Project Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.19.5",
    "matplotlib>=3.5.1",
    "seaborn>=0.11.2",
    "plotly>=5.5.0",
    "networkx>=2.6.3",
    "pandas>=1.3.5",
    "torch>=1.7.0",
    "tensorflow>=2.4.0",
    "jupyter>=1.0.0",
    "python-sat>=0.1.7.dev12",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "isort>=5.10.1",
    "mypy>=0.931",
    "flake8>=4.0.1",
]
docs = [
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
]
visualization = [
    "jupyterlab>=3.0.0",
    "ipywidgets>=7.6.5",
]

[project.urls]
"Homepage" = "https://github.com/username/sat-rl"
"Bug Tracker" = "https://github.com/username/sat-rl/issues"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"