[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.3.0"]

[project]
authors = [{name = "SAT+RL Project Contributors"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "charset-normalizer>=3.4.2,<4.0",
  "dspy>=2.6.23,<3.0.0",
  "filelock>=3.12,<4.0",
  "gymnasium>=0.28,<0.30",
  "h5py>=3.6,<4.0",
  "jax>=0.3,<0.5",
  "jupyter>=1.1.1,<2.0",
  "matplotlib>=3.5,<4.0",
  "networkx>=2.6,<3.0",
  "numpy>=1.21,<2.0",
  "ollama (>=0.4.8,<0.5.0)",
  "pandas>=2.1.1,<3.0",
  "pkgutil-resolve-name>=1.3.10,<2.0.0",
  "pyarrow>=8.0,<12.0",
  "pydantic (>=2.11.4,<3.0.0)",
  "scikit-learn>=1.6,<2.0",
  "seaborn>=0.11,<0.13",
  "tqdm>=4.64,<5.0",
  "wandb>=0.19.11,<0.20.0",
  "zstandard (>=0.23.0,<0.24.0)",
  "zstd (>=1.5.7.0,<2.0.0.0)"
]
description = "Gymnasium environment for SAT problems with RL hooks"
license = {text = "MIT"}
name = "satrlgym"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "black>=22.1.0",
  "flake8>=4.0.1",
  "isort>=5.10.1",
  "mypy>=0.931",
  "pytest-cov>=2.12.0",
  "pytest>=6.0"
]
ml = [
  "tensorflow>=2.15,<3.0", # For TensorFlow-based ML
  "torch>=1.10,<2.0" # For PyTorch-based ML
]
proof = [
]
solvers = [
  "python-sat>=0.1.7.dev3" # For PySAT integration
]
visualization = [
  "jupyterlab>=3.0.0",
  "plotly>=5.5.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/frecsh/SatRLGym/issues"
"Homepage" = "https://github.com/frecsh/SatRLGym"

[tool.poetry.scripts]
satrlgym = "satrlgym.__main__:main"
